--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "mobx-react-typescript-boilerplate",
+  "name": "antitreningi-test",
   "version": "1.0.0",
-  "description": "Boilerplate for MobX + React project with Typescript, ES6 compilation and hot code reloading",
   "scripts": {
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mobxjs/mobx-react-typescript-boilerplate.git"
+    "url": "https://github.com/kapush/antitreningi-test.git"
   },
   "keywords": [
     "react",
